# routerLLM

./: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Project.md  README.md  SISTEMA_COMPLETO_FINALE.md  USAGE.md  debug_generation.py  debug_graham_labels.py  debug_validation.py  main.py  pyproject.toml  router_methods.md  router_types.md  run_enhanced_system.sh  temp_router_end.py  test_complete_fixes.py  test_complexity_routing.py  test_graham_router.py  test_pipeline_system.py  test_validation_issue.py  todo_router.md  usage.md  verify_complete_system.py
configs/: default_config.yaml  test_config.yaml
docs/: ACADEMIC_OVERVIEW.md  INTEGRATED_SYSTEM_GUIDE.md  LARGE_MODEL_SETUP.md
examples/: basic_usage.py  sample_dataset.json
logs/carbon/: emissions.csv
scripts/: README_SLURM.md  aggregate_results.py  enhanced_humaneval_comparison.py  generate_report.py  humaneval_comparison.py  large_model_benchmark.py  run_full_pipeline.slurm  test_nvidia_complexity.py  test_router_and_save.py  validate_large_model_setup.py  working_nvidia_router.py
src/routerllm/: __init__.py
src/routerllm/core/: __init__.py  direct_system.py  system.py
src/routerllm/data/: __init__.py  dataset_generator.py  huggingface_dataset_loader.py
src/routerllm/models/: __init__.py  large_model_manager.py  llm_manager.py  moe_router.py  rl_router.py  router.py
src/routerllm/training/: __init__.py  losses.py  trainer.py
src/routerllm/utils/: __init__.py  carbon_tracker.py  logger.py
test_data/: test_dataset.json  train_dataset.json  val_dataset.json
